Fix a crash when smart patch tool is used on an HDR image

The difference between channel values in HDR color spaces
may be higher than `unitValue`, and we should catch this case.

BUG:451912